<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title"><b><big>Beygingarlýsing</big></b>\n<small>íslensks nútímamáls</small></string>
    <string name="titleSmall">Stofnun Árna Magnússonar í íslenskum fræðum</string>
    <string name="background_desc">Bakgrunns bje</string>
    <string name="aboutTitle">Um beygðu</string>
    <string name="search_desc">Leitarmynd</string>
    <string name="search">Leita</string>
    <string name="aboutText">Upprunalegt markmið við gerð Beygingarlýsingar íslensks nútímamáls (BÍN) var að koma upp beygingarlýsingu á tölvutæku formi sem nýtast mætti til máltækniverkefna af ýmsu tagi, í orðabókargerð og við málfræðirannsóknir. Jafnframt var markmiðið að gera Beygingarlýsinguna aðgengilega fyrir almenning á vefnum.
Þessi markmið stangast að nokkru leyti á. Í máltækni er lykilatriði að gögnin innihaldi öll málbrigði til þess að koma að fullum notum. Gögnin þurfa að duga til að greina hvað sem er, líka það sem ekki er talið gullaldarmál. Notendur BÍN á vefnum ætlast hins vegar oftar en ekki til þess að fá leiðbeiningar um rétt mál og rangt. Hér er á ferðinni munurinn á lýsandi og vísandi málfræði (forskriftarmálfræði) en eins og nafnið bendir til þá er BÍN í megindráttum lýsandi. Til þess að koma til móts við notendur vefsíðunnar sem vilja vanda mál sitt eru athugasemdir með leiðbeiningum og skýringum fyrir ofan beygingardæmin en í beygingarrammanum sjálfum birtast allar beygingarmyndirnar athugasemdalausar, þótt þeim sé oft og tíðum raðað eftir gildi. Nánar um BÍN í máltækni og beygingardæmin.</string>
    <string name="searchInput">Hvað viltu finna?</string>
    <string name="allowed_characters">aábdðeéfghiíjklmnoóprstuúvxyýþæöAÁBDÐEÉFGHIÍJKLMNOÓPRSTUÚVXYÝÞÆÖwWzZcC</string>
    <string name="buttonSearch">Leita</string>
    <string name="title_activity_beygingar">eygingarmynd</string>
    <string name="title_activity_table_test">TableTest</string>
    <string name="title_activity_about">Um beygðu</string>

    <!-- Action Bar -->
    <string name="app_name">Beygðu</string>
    <string name="about">Um Beygðu</string>
    <string name="action_filter">Sía</string>
    <string name="action_mail">Senda Póst</string>
    <!-- Table activity strings -->
    <string name="tableTitle">Nafn á orði</string>
    <string name="eintala">Eintala</string>
    <string name="fleirtala">Fleirtala</string>
    <string name="a_gr">án greinis</string>
    <string name="m_gr">með greini</string>
    <string name="nf">Nf.</string>
    <string name="tf">Þf.</string>
    <string name="tgf">Þgf.</string>
    <string name="ef">Ef.</string>
    <string name="fyrsta_pers">1.pers</string>
    <string name="onnur_pers">2.pers</string>
    <string name="thridja_pers">3.pers</string>
    <string name="lo_kk">KK</string>
    <string name="lo_kvk">KVK</string>
    <string name="lo_hk">HK</string>

    <!-- BeygingarActivityDialog -->
    <string name="choosedialog">Smelltu a thad ord sem thu villt sja</string>

    <!-- Dialog -->
    <string name="MultiHitDialog"> orð fundust. Smelltu á það orð sem þú vilt sjá: </string>
    <string name="SkrambiDialog">Stafsetningavillur fundust í leitarorði. Varstu að reyna að leita að: </string>
    <string name="PositiveButton">Áfram</string>
    <string name="NegativeButton">Hætta við</string>

    <!-- NetworkErrorString -->
    <string name="networkErrorString">Ekki náðist samband við gagnagrunn</string>

    <!-- Spinner -->
    <string name="progressdialog">Sæki gögn...</string>

    <!-- Cache -->
    <string name="title_activity_cache">Fyrri leitir</string>

    <!-- Statistics -->
    <string name="title_activity_statistics">Tölfræði</string>
    <string name="pieChart_Desc">Fjöldi leita eftir orðflokkum</string>

    <!-- Auto-Generated -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer-->
    <string name="open_drawer">Skúffa opin</string>
    <string name="close_drawer">Skúffa lokuð</string>
    <string name="cache_button_text">Fyrri leitir</string>
    <string name="nav_drawer_sia">Sía</string>


    <!-- Items in Navigation Drawer -->
    <string-array name="navdrawer_items">
        <item>Beygðu</item>
        <item>Fyrri leitir</item>
        <item>Um Beygðu</item>
        <item>Tölfræði</item>
        <item>Höfundar</item>
        <item>Hvar erum við?</item>
        <item>Bera saman</item>
        <item>Hjálp</item>

    </string-array>
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_call</item>
        <item>@drawable/ic_action_call</item>
        <item>@drawable/ic_action_call</item>
        <item>@drawable/ic_action_call</item>
        <item>@drawable/ic_action_call</item>
        <item>@drawable/ic_action_menu</item>
    </array>
    <string name="title_activity_maps">Hér erum við</string>
    <string name="title_activity_author">Höfundar</string>
    <string name="title_activity_authors">Höfundar</string>
    <string name="title_activity_compare">Bera saman</string>

    <!-- Authors of app -->
    <string name="authors">Höfundar Beygðu</string>

    <string name="arnar">Arnar Jónsson \n</string>
    <string name="arnarDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat feugiat hendrerit. Suspendisse pharetra ante laoreet purus sodales ultricies .</string>
    <string name="daniel">Daníel Páll Jóhannsson</string>
    <string name="danielDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat feugiat hendrerit. Suspendisse pharetra ante laoreet purus sodales ultricies nec quis lectus. .</string>
    <string name="jon">Jón Friðrik Jónatansson</string>
    <string name="jonDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat feugiat hendrerit. Suspendisse pharetra ante laoreet purus sodales ultricies nec quis lectus. Nulla facilisis eu lorem vel mollis. Pellentesque venenatis pulvinar volutpat. Vestibulum tempor fringilla quam. Mauris tincidunt quis odio id tempor. Vivamus .</string>
    <string name="snaer">Snær Seljan Þóroddsson</string>
    <string name="snaerDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat feugiat hendrerit. Suspendisse pharetra ante laoreet purus sodales .</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_tutorial">BeygduTutorial</string>

    <!-- TutorialActivity Resources -->
    <string name="TF01">Þakka ykkur fyrir að að velja Beygðu, snallforrit Beygingarlýsingar íslensks nútímamáls</string>
    <string name="TF02">Flettið til hægri eða vinstri til að skiptja um skjái?</string>

    <string name="TF11">Second page material</string>
    <string name="TF12">Second page material</string>

    <string name="TF21">Third page material</string>
    <string name="TF22">Third page material</string>

    <string name="TF31">Fourth page material</string>
    <string name="TF32">Fourth page material</string>

    <string name="TF41">Fifth page material</string>
    <string name="TF42">Fifth page material</string>

    <string name="TF51">Sixth page material</string>
    <string name="TF52">Sixth page material</string>

    <string name="TF61">Seventh page material</string>
    <string name="TF62">Seventh page material</string>

    <string name="TF71">Eighth page material</string>
    <string name="TF72">Eighth page material</string>
    <!-- TutorialActivity Resources -->



    <!-- Footer -->
    <!--Höfundarréttur © 2002-2015 Orðabók Háskólans / Stofnun Árna Magnússonar í íslenskum fræðum.
    Öll afritun Beygingarlýsingarinnar er bönnuð án leyfis.-->
    <string name="copyright">© 2015 Stofnun Árna Magnússonar \n í íslenskum fræðum</string>

</resources>