<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="is.arnastofnun.beygdu.Main"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:background="@color/d_blue"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="20dp"/>

    <com.software.shell.fab.ActionButton
        android:id="@+id/circleStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_marginBottom="-30dp"
        android:layout_marginLeft="25dp"
        fab:type="DEFAULT"
        fab:button_color="#FF5722"
        fab:image="@drawable/ic_action_star"
        fab:image_size="28dp"
        fab:shadow_color="#757575"
        fab:shadow_radius="1.0dp"
        fab:shadow_xOffset="0.5dp"
        fab:shadow_yOffset="1.0dp"
        fab:show_animation="@anim/fab_roll_from_down"
        fab:hide_animation="@anim/fab_roll_to_down"
        />



    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp">

        <TableRow
            android:id="@+id/search_row"
            android:padding="10dp">
            <EditText
                android:id="@+id/mainSearch"
                android:layout_height="50dp"
  				android:layout_weight="2"
                android:background="@drawable/inputborder"
                android:textColor="@color/font_light"
                android:textSize="24dp"
                android:hint="@string/searchInput"
                android:digits="@string/allowed_characters"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:layout_marginRight="10dp"/>
4
            <ImageButton
                android:id="@+id/commitSearch"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:contentDescription="@string/search_desc"
                android:onClick="btnOnClick"
                android:src="@drawable/ic_action_search"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>





    </TableLayout>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3sp"
        android:gravity="center"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cache"
            android:layout_weight="1"
            android:textColor="@color/font_default"
            android:id="@+id/cache"
            android:onClick="cacheClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Statistics"
            android:textColor="@color/font_default"
            android:layout_weight="1"
            android:id="@+id/statisticsBtn"
            android:onClick="statisticsClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Google Maps"
            android:textColor="@color/font_default"
            android:layout_weight="1"
            android:id="@+id/mapBtn"
            android:onClick="googleClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Authors"
            android:textColor="@color/font_default"
            android:layout_weight="1"
            android:id="@+id/authors"
            android:onClick="authorClick"/>
    </TableRow>

    <!--TextView
        android:id="@+id/titleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleSmall"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:textSize="12sp"
        android:gravity="center"/-->

</RelativeLayout>

